--- a/src/webapp/WEB-INF/views/cars/index.html
+++ b/src/webapp/WEB-INF/views/cars/index.html
@@ -1,19 +1,190 @@
-<!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Cars</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta charset="UTF-8">
+    <title>cars</title>
+    <style>
+        .container-3 a {
+            position: relative;
+            text-decoration: none;
+            color: #337AB7;
+            display: inline-block;
+        }
+
+        .container-3 a::before,
+        .container-3 a::after {
+            content: '';
+            position: absolute;
+            transition: transform .5s ease;
+            left: -4px;
+            top: 0;
+            width: calc(100% + 8px);
+            height: 100%;
+            border-style: solid;
+            border-color: #337AB7;
+            box-sizing: border-box;
+        }
+
+        .container-3 a::before {
+            border-width: 1px 0 1px 0;
+            transform: scaleX(0);
+        }
+
+        .container-3 a::after {
+            border-width: 0 1px 0 1px;
+            transform: scaleY(0);
+        }
+
+        .container-3 a:hover::before,
+        .container-3 a:hover::after {
+            transform: scale(1, 1);
+        }
+
+        .datagrid table {
+            border-collapse: collapse;
+            text-align: left;
+            width: 100%;
+        }
+
+        .datagrid {
+            font: normal 12px/150% Arial, Helvetica, sans-serif;
+            background: #fff;
+            overflow: hidden;
+            -webkit-border-radius: 10px;
+            -moz-border-radius: 10px;
+            border-radius: 10px;
+        }
+
+        .datagrid table td, .datagrid table th {
+            padding: 10px 5px;
+        }
+
+        .datagrid table thead th {
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #006699), color-stop(1, #00557F));
+            background: -moz-linear-gradient(center top, #006699 5%, #00557F 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#006699', endColorstr='#00557F');
+            background-color: #006699;
+            color: #FFFFFF;
+            font-size: 14px;
+            font-weight: bold;
+            border-left: 1px solid #0070A8;
+        }
+
+        .datagrid table thead th:first-child {
+            border: none;
+        }
+
+        .datagrid table tbody td {
+            color: #00557F;
+            border-left: 2px solid #E1EEF4;
+            font-size: 15px;
+            font-weight: normal;
+        }
+
+        .datagrid table tbody .alt td {
+            background: #E1EEf4;
+            color: #00557F;
+        }
+
+        .datagrid table tbody td:first-child {
+            border-left: none;
+        }
+
+        .datagrid table tbody tr:last-child td {
+            border-bottom: none;
+        }</style>
 </head>
 <body>
-<table border="1" style="width:300px">
-    <tr>
-        <td>Cars</td>
-    </tr>
-    <tr th:each="car : ${cars}">
-        <td th:text="${car.getId()}">Cars</td>
-        <td th:text="${car.getModel()}">Cars</td>
-        <td th:text="${car.getSeries()}">Cars</td>
-    </tr>
+<table>
+    <th>
+    <td>
+        <div class="container-3">
+            <h2><a href="/">|на главную|</a></h2>
+
+        </div>
+    </td>
+    <td>
+        <div class="container-3">
+            <h2><a href="/cars?count=1">| жмяк (count1)|</a></h2>
+        </div>
+    </td>
+    <td>
+        <div class="container-3">
+            <h2><a href="/cars?count=2">| жмяк (count2)|</a></h2>
+        </div>
+    </td>
+
+    <td>
+        <div class="container-3">
+            <h2><a href="/cars?count=3">| жмяк (count3)|</a></h2>
+        </div>
+    </td>
+    <td>
+        <div class="container-3">
+            <h2><a href="/cars?count=4">| жмяк (count4)|</a></h2>
+        </div>
+    </td>
+    <td>
+        <div class="container-3">
+            <h2><a href="/cars?count=5">| жмяк (count5)|</a></h2>
+        </div>
+
+    <td>
+        <div class="container-3">
+            <h2><a href="/cars/new">| добавить тачку|</a></h2>
+        </div>
+    </td>
+    </th>
 </table>
+<div class="datagrid">
+    <table>
+        <thead>
+        <tr>
+            <th>Айдишник</th>
+            <th>Модель</th>
+            <th>Серия</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="car : ${cars.get(0)}">
+            <td th:text="${car.getId()}"></td>
+            <td th:text="${car.getModel()}"></td>
+            <td th:text="${car.getSeries()}"></td>
+        </tr>
+        <tr class="alt" th:each="car : ${cars.get(1)}">
+            <td th:text="${car.getId()}"></td>
+            <td th:text="${car.getModel()}"></td>
+            <td th:text="${car.getSeries()}"></td>
+        </tr>
+        <tr th:each="car : ${cars.get(2)}">
+            <td th:text="${car.getId()}"></td>
+            <td th:text="${car.getModel()}"></td>
+            <td th:text="${car.getSeries()}"></td>
+        </tr>
+        <tr class="alt" th:each="car : ${cars.get(3)}">
+            <td th:text="${car.getId()}"></td>
+            <td th:text="${car.getModel()}"></td>
+            <td th:text="${car.getSeries()}"></td>
+        </tr>
+        <tr th:each="car : ${cars.get(4)}">
+            <td th:text="${car.getId()}"></td>
+            <td th:text="${car.getModel()}"></td>
+            <td th:text="${car.getSeries()}"></td>
+        </tr>
+        <tr class="alt" th:each="car : ${cars.get(5)}">
+            <td th:text="${car.getId()}"></td>
+            <td th:text="${car.getModel()}"></td>
+            <td th:text="${car.getSeries()}"></td>
+        </tr>
+        <tr th:each="car : ${cars.get(6)}">
+            <td th:text="${car.getId()}"></td>
+            <td th:text="${car.getModel()}"></td>
+            <td th:text="${car.getSeries()}"></td>
+        </tr>
+
+        </tbody>
+    </table>
+</div>
+</div>
 </body>
 </html>
