- add service - refactor all - add CarApi

--- a/src/webapp/WEB-INF/views/cars/new.html
+++ b/src/webapp/WEB-INF/views/cars/new.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<form
-        th:method="POST" th:action="@{/cars}" th:object="${car}">
-    <label for="model">Enter model:</label>
-    <input type="text" th:field="*{model}" id="model">
-    <label for="model">Enter series:</label>
-    <input type="text" th:field="*{series}" id="series">
-    <br/>
-    <input type="submit" value="Create!">
-</form>
-</body>
-</html>
+<!--<!DOCTYPE html>-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<form-->
+<!--        th:method="POST" th:action="@{/cars}" th:object="${car}">-->
+<!--    <label for="model">Enter model:</label>-->
+<!--    <input type="text" th:field="*{model}" id="model">-->
+<!--    <label for="model">Enter series:</label>-->
+<!--    <input type="text" th:field="*{series}" id="series">-->
+<!--    <br/>-->
+<!--    <input type="submit" value="Create!">-->
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
