--- a/src/webapp/WEB-INF/views/cars/show.html
+++ b/src/webapp/WEB-INF/views/cars/show.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>New car</title>
-</head>
-<body>
-<p th:text="${car.getModel()}">VALUE</p>
-<p th:text="${car.getSeries()}">VALUE</p>
-</body>
-</html>
+<!--<!DOCTYPE html>-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>New car</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<p th:text="${car.getModel()}">VALUE</p>-->
+<!--<p th:text="${car.getSeries()}">VALUE</p>-->
+<!--</body>-->
+<!--</html>-->
